<resources>
    <string name="app_name">Omeron</string>
    <string name="app_description">Omeron is a privacy-focused Reddit client (a fork of Stealth).\n\nFree software, licensed under the GNU GPLv3.</string>
    <string name="handle_link_label">Open in Omeron</string>
    <string name="gitlab_link" translatable="false">https://gitlab.com/cosmosapps/stealth</string>
    <string name="matrix_link" translatable="false">https://matrix.to/#/#stealth-app:matrix.org</string>
    <string name="email" translatable="false">cosmos.dev@protonmail.com</string>
    <string name="github_link" translatable="false">https://github.com/shourovrm/Omeron</string>
    <string name="ok">OK</string>
    <string name="post_ratio">%1$d%%</string>
    <string name="time_difference_now">now</string>
    <string name="time_difference_minute">%1$dm ago</string>
    <string name="time_difference_hour">%1$dh ago</string>
    <string name="time_difference_day">%1$dd ago</string>
    <string name="time_difference_year">%1$dy ago</string>
    <string name="time_difference_minute_short">%1$dm</string>
    <string name="time_difference_hour_short">%1$dh</string>
    <string name="time_difference_day_short">%1$dd</string>
    <string name="time_difference_year_short">%1$dy</string>
    <string name="award_count">x%1$d</string>
    <string name="tab_user_comments">Comments</string>
    <string name="tab_user_submitted">Submitted</string>
    <string name="tab_user_gilded">Gilded</string>
    <string name="sort_time_hour">Now</string>
    <string name="sort_time_day">Today</string>
    <string name="sort_time_week">This Week</string>
    <string name="sort_time_month">This Month</string>
    <string name="sort_time_year">This Year</string>
    <string name="sort_time_all">All Time</string>
    <string name="sort_time_hour_short">Now</string>
    <string name="sort_time_day_short">Day</string>
    <string name="sort_time_week_short">Week</string>
    <string name="sort_time_month_short">Month</string>
    <string name="sort_time_year_short">Year</string>
    <string name="sort_time_all_short">All</string>
    <string name="sort_title">Sort</string>
    <string name="sort_time_title">Time</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_top">Top</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_controversial">Controversial</string>
    <string name="sort_relevance">Relevance</string>
    <string name="sort_comments">Comments</string>
    <string name="sort_best">Best</string>
    <string name="sort_old">Old</string>
    <string name="sort_qa">Q&amp;A</string>
    <string name="toggle_visibility">Toggle visibility on Home feed</string>
    <string name="edit">Edit</string>
    <string name="dialog_unsubscribe_message">Unsubscribe from r/%1$s?</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="dialog_create_multireddit_title">Create Multireddit</string>
    <string name="dialog_create_multireddit_hint">Name</string>
    <string name="dialog_create_multireddit_button">Create</string>
    <string name="dialog_edit_multireddit_title">Edit Multireddit</string>
    <string name="dialog_rename_multireddit_hint">Name</string>
    <string name="dialog_delete_multireddit_button">Delete</string>
    <string name="dialog_delete_multireddit_title">Delete Multireddit</string>
    <string name="dialog_delete_multireddit_message">Are you sure you want to delete this multireddit?</string>
    <string name="multireddit_subreddits_header">Subreddits</string>
    <string name="multireddit_users_header">Users</string>
    <string name="multireddit_add_subreddit_hint">Search subreddit</string>
    <string name="multireddit_add_user_hint">Add user (u/name)</string>
    <string name="multireddit_member_count">%d members</string>
    <string name="multireddit_create">Create multireddit</string>
    <string name="multireddit_menu_edit">Edit</string>
    <string name="multireddit_menu_hide">Hide</string>
    <string name="multireddit_menu_show">Show</string>
    <string name="multireddit_menu_delete">Delete</string>
    <string name="search_hint">Search through Reddit</string>
    <string name="fragment_preferences_label">Preferences</string>
    <string name="layout_toggle">Toggle layout</string>
    <string name="layout_toggle_card">Card layout. Tap to change layout</string>
    <string name="layout_toggle_gallery">Gallery layout. Tap to change layout</string>
    <string name="layout_toggle_compact">Compact layout. Tap to change layout</string>
    <string name="layout_toggle_filmstrip">Filmstrip layout. Tap to change layout</string>
    <string name="filmstrip_tile_image">Image: %1$s</string>
    <string name="filmstrip_tile_video">Video: %1$s</string>
    <string name="filmstrip_tile_gallery">Gallery: %1$s</string>
    <plurals name="filmstrip_tile_gallery_count">
        <item quantity="one">Gallery, %1$d image: %2$s</item>
        <item quantity="other">Gallery, %1$d images: %2$s</item>
    </plurals>
    <string name="filmstrip_close">Close viewer</string>
    <string name="filmstrip_position">%1$d / %2$d</string>
    <string name="filmstrip_score_description">Score: %1$s</string>
    <string name="filmstrip_comments_description">Open post, %1$s comments</string>
    <string name="filmstrip_mute_description">Mute video</string>
    <string name="filmstrip_play_description">Play video</string>
    <string name="filmstrip_pause_description">Pause video</string>
    <string name="filmstrip_info_description">Post details. Tap or swipe up to expand</string>
    <string name="filmstrip_info_meta">u/%1$s · %2$s</string>
    <string name="filmstrip_details_meta">u/%1$s · %2$s · %3$s</string>
    <string name="filmstrip_open_post">Open post · %1$s comments</string>
    <string name="filmstrip_open_post_single">Open post · 1 comment</string>
    <string name="filmstrip_action_save">Save</string>
    <string name="filmstrip_action_saved">Saved</string>
    <string name="filmstrip_action_share">Share</string>
    <string name="filmstrip_action_download">Download</string>
    <string name="filmstrip_go_to_subreddit">Go to r/%1$s</string>
    <string name="filmstrip_go_to_user">Go to u/%1$s</string>
    <string name="filmstrip_details_handle">Details panel</string>
    <string name="post_age_separated" translatable="false">· %1$s</string>
    <string name="post_save_description">Save post</string>
    <string name="post_unsave_description">Remove from saved</string>
    <string name="post_more_description">More options</string>
    <string name="tab_search_post">Posts</string>
    <string name="tab_search_subreddit">Communities</string>
    <string name="tab_search_user">Users</string>
    <string name="subreddit_button_unsubscribe">Unsubscribe</string>
    <string name="subscription_menu_hide">Hide from feed</string>
    <string name="subscription_menu_show">Show on feed</string>
    <string name="subreddit_button_subscribe">Subscribe</string>
    <string name="subreddit_subscribers">Subscribers</string>
    <string name="subreddit_active_users">Online</string>
    <string name="user_post_karma">Post Karma</string>
    <string name="user_comment_karma">Comment Karma</string>
    <string name="user_cake_day">Cake Day</string>
    <string name="flair_nsfw">NSFW</string>
    <string name="flair_spoiler">Spoiler</string>
    <string name="flair_oc">OC</string>
    <string name="comment_score">%1$s pts</string>
    <string name="comment_more">More (%1$d)</string>
    <string name="comment_more_error">Error loading more comments. Tap to retry.</string>
    <string name="comment_date_edited">%1$s* (%2$s)</string>
    <string name="comment_controversiality">✝</string>
    <string name="comment_op">OP</string>
    <string name="comment_link_info">%1$s - u/%2$s</string>
    <string name="media_page_counter_label">of</string>
    <string name="reddit_user_prefixed">u/%1$s</string>
    <string name="menu_open_link">Open Externally</string>
    <string name="menu_share_link">Share Link</string>
    <string name="menu_copy_link">Copy Link</string>
    <string name="menu_share_post">Share Post</string>
    <string name="menu_remove_history">Remove from History</string>
    <string name="menu_remove_saved">Remove from Saved</string>
    <string name="post_load_discussion">View Entire Discussion</string>
    <string name="post_crosspost">Crosspost</string>
    <string name="network_retry_message">Something went wrong</string>
    <string name="network_retry_action">Retry</string>
    <string name="login_required_message">Reddit needs you to log in to load posts.</string>
    <string name="login_required_action">Log in</string>
    <string name="dialog_subreddit_not_found_title">Subreddit not found</string>
    <string name="dialog_subreddit_not_found_body">This subreddit does not exist or may have been banned.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_subreddit_unauthorized_title">Subreddit is private</string>
    <string name="dialog_subreddit_unauthorized_body">You do not have access to this subreddit.</string>
    <string name="dialog_user_not_found_title">User not found</string>
    <string name="dialog_user_not_found_body">This user does not exist.</string>
    <string name="dialog_user_unauthorized_title">User is suspended</string>
    <string name="dialog_user_unauthorized_body">This user has been suspended.</string>
    <string name="dialog_media_not_found_title">Media not found</string>
    <string name="dialog_media_not_found_body">This image or video you are looking for does not exist or may have been removed.</string>
    <string name="dialog_night_mode_title">Theme</string>
    <string name="dialog_credit_show_website">Show Website</string>
    <string name="dialog_credit_show_license">Show License</string>
    <string name="dialog_reddit_source_title">Reddit Source</string>
    <string name="dialog_reddit_source_disclaimer_title">Disclaimer</string>
    <string name="preference_night_mode">Theme</string>
    <string name="preference_left_handed_mode">Left-handed mode</string>
    <string name="navigation_label_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="empty_multireddits">No multireddits yet — use Manage in the drawer to create one</string>
    <string name="add_to_multireddit">Add to multireddit</string>
    <string name="preference_check_for_updates">Check for updates</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_content">Content</string>
    <string name="settings_category_reddit">Reddit</string>
    <string name="settings_category_privacy_and_data">Privacy and data</string>
    <string name="settings_category_about">About</string>
    <string name="settings_default_post_layout">Default post layout</string>
    <string name="settings_left_handed_mode_summary">The bottom bar slides out to the left instead of the right when you scroll</string>
    <string name="settings_show_nsfw_posts">Show NSFW posts</string>
    <string name="settings_blur_nsfw_previews">Blur NSFW previews</string>
    <string name="settings_blur_spoiler_previews">Blur spoiler previews</string>
    <string name="settings_start_videos_muted">Start videos muted</string>
    <string name="settings_account">Account</string>
    <string name="settings_source">Source</string>
    <string name="settings_link_redirects">Link redirects</string>
    <string name="settings_backup_and_restore">Backup and restore</string>
    <string name="settings_backup_and_restore_summary">Back up or restore profiles, subscriptions and saved items</string>
    <string name="settings_about_omeron">About Omeron</string>
</resources>