<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="multi"
            type="com.omeron.data.model.db.Multireddit" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/subscriptions_card_height"
        style="@style/SubscriptionsCardStyle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/subscriptions_padding"
            android:background="@drawable/card_background">

            <TextView
                android:id="@+id/multireddit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_hide"
                android:textAppearance="@style/TextAppearanceSubscription"
                android:text="@{multi.name}"
                tools:text="Multireddit"/>

            <TextView
                android:id="@+id/multireddit_members_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@null"
                android:textAppearance="@style/TextAppearanceSubscriptionTime"
                tools:text="3 members"/>

            <ImageButton
                android:id="@+id/button_hide"
                android:layout_width="@dimen/app_bar_button_size"
                android:layout_height="@dimen/app_bar_button_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_edit"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/icon_tint"
                android:contentDescription="@string/toggle_visibility"
                app:srcCompat="@drawable/ic_visibility"/>

            <ImageButton
                android:id="@+id/button_edit"
                android:layout_width="@dimen/app_bar_button_size"
                android:layout_height="@dimen/app_bar_button_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_delete"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/icon_tint"
                android:contentDescription="@string/edit"
                app:srcCompat="@drawable/ic_edit"/>

            <ImageButton
                android:id="@+id/button_delete"
                android:layout_width="@dimen/app_bar_button_size"
                android:layout_height="@dimen/app_bar_button_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@color/icon_tint"
                android:contentDescription="@string/dialog_delete_multireddit_button"
                app:srcCompat="@drawable/ic_delete"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
