<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    tools:context=".ui.postlist.PostListFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp"
        app:cardBackgroundColor="?attr/colorSurface">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                app:elevation="0dp">

                <include
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    layout="@layout/layout_appbar" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways"
                    style="@style/TabLayoutStyle"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/multi_tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:tabMode="scrollable"
                    android:visibility="gone"
                    tools:visibility="visible"
                    style="@style/TabLayoutStyle"/>

            </com.google.android.material.appbar.AppBarLayout>

            <com.omeron.ui.common.widget.PullToRefreshLayout
                android:id="@+id/pull_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.omeron.ui.common.widget.PostRecyclerView
                    android:id="@+id/list_post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:overScrollMode="never" />
            </com.omeron.ui.common.widget.PullToRefreshLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.omeron.ui.common.widget.CradleView
                    android:id="@+id/loading_cradle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <com.omeron.ui.common.widget.InfoBarView
                    android:id="@+id/info_retry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/info_bar_margin_top"
                    style="@style/InfoBarStyle"
                    app:textMessage="@string/network_retry_message"
                    app:textAction="@string/network_retry_action"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/empty_multireddits"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:gravity="center"
                    android:text="@string/empty_multireddits"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:visibility="visible"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/navigation_view"
        android:background="?attr/colorSurface"
        android:layout_width="@dimen/profile_home_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_profiles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:clipToPadding="true"
            android:overScrollMode="never"/>

    </FrameLayout>

</androidx.drawerlayout.widget.DrawerLayout>